--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/Flo.png">
+            <img class="avatar" src="./Flo.png">
             <div >
                 <h3>Florian</h3>
                 <p>Digital Strategist</p>
